# FarmBot

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: Config.h  dllmain.cpp
src/core/: ConfigLoader.h  EntityList.h  GameBase.h  Memory.h  Pointers.h
src/features/: MetinFarm.h  WaitHack.h
src/gui/: GUI.h
